--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css"/>
+    <!-- Linking your main.css file inside the css folder -->
+    <link rel="stylesheet" href="styles/main.css"/>
     <title>MAD9013 - Week {#}</title>
 </head>
 <body>
 
-<script src="js/script.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
