--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="title" content="Your Website Title">
+    <meta name="description" content="Your Website Description">
+    <meta name="keywords" content="Your website keywords for SEO">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="Your Name">
     <!-- Linking your main.css file inside the css folder -->
     <link rel="stylesheet" href="styles/main.css"/>
     <title>MAD9013 - Week {#}</title>
