updated metadata for better SEO

--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Linking your main.css file inside the css folder -->
-    <link rel="stylesheet" href="styles/main.css"/>
-    <title>MAD9013 - Week {#}</title>
+  <!-- metadata goes here -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- HTML Meta Tags -->
+  <title>Web Development Template with metadata</title>
+  <meta name="description" 
+        content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" 
+        content="HTML Template with metadata">
+  <meta itemprop="description"
+        content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta itemprop="image" content="https://picsum.photos/id/866/400/400">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://shah0150.github.io/sass-in-class">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="HTML Template with metadata">
+  <meta property="og:description"
+    content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta property="og:image" content="https://picsum.photos/id/866/400/400">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HTML Template with metadata">
+  <meta name="twitter:description"
+    content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta name="twitter:image" content="https://picsum.photos/id/866/400/400">
+
+  <!-- Linking your main.css file inside the css folder -->
+  <link rel="stylesheet" href="styles/main.css" />
+
 </head>
+
 <body>
 
-<script src="scripts/main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
+
 </html>
