Added some more info

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <title>Web Development Template with metadata</title>
   <meta name="description" 
         content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta name="author" content="shah0150">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" 
         content="HTML Template with metadata">
   <meta itemprop="description"
         content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta itemprop="author" content="shah0150">
   <meta itemprop="image" content="https://picsum.photos/id/866/400/400">
 
   <!-- Facebook Meta Tags -->
@@ -24,6 +26,7 @@
   <meta property="og:title" content="HTML Template with metadata">
   <meta property="og:description"
     content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta property="og:author" content="shah0150">
   <meta property="og:image" content="https://picsum.photos/id/866/400/400">
 
   <!-- Twitter Meta Tags -->
@@ -31,15 +34,17 @@
   <meta name="twitter:title" content="HTML Template with metadata">
   <meta name="twitter:description"
     content="A basic web template with all the different types of Metadata tags to enhance your application for SEO.">
+  <meta name="twitter:author" content="shah0150">
   <meta name="twitter:image" content="https://picsum.photos/id/866/400/400">
 
   <!-- Linking your main.css file inside the css folder -->
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" type="text/css" href="styles/main.css" />
 </head>
 
 <body>
 
-  <script src="scripts/main.js"></script>
+  <!-- Your Scripts --->
+  <script type="text/javascript" src="scripts/main.js" defer></script>
 </body>
 
 </html>
